[fix] timeline line break on locale change

--- a/app/globals.css
+++ b/app/globals.css
@@ -133,11 +133,9 @@
   .timeline-content:nth-child(2), .timeline-content:nth-child(4) {
     @apply top-[1px];
   }
-}
 
-@media only screen and (min-width: 1024px) {
   .timeline-content:nth-child(even)::before {
-    @apply top-[-47.5px];
+    @apply top-[-48.5px];
   }
 }
 
